--- a/03_widgets.ipynb
+++ b/03_widgets.ipynb
@@ -2,16 +2,35 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "source": [
     "# 3.3. Mastering widgets in the Jupyter Notebook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 1,
+   "metadata": {
+    "hideCode": false,
+    "hideOutput": false,
+    "hidePrompt": false
+   },
+   "outputs": [
+    {
+     "ename": "ModuleNotFoundError",
+     "evalue": "No module named 'ipywidgets'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-1-17cc5a665476>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0;32mimport\u001b[0m \u001b[0mipywidgets\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mwidgets\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m      2\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mipywidgets\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mHBox\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mVBox\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mLayout\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mBox\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      3\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      4\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mmatplotlib\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mpyplot\u001b[0m \u001b[0;32mas\u001b[0m \u001b[0mplt\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      5\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0mIPython\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mdisplay\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mdisplay\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mclear_output\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+      "\u001b[0;31mModuleNotFoundError\u001b[0m: No module named 'ipywidgets'"
+     ]
+    }
+   ],
    "source": [
     "import ipywidgets as widgets\n",
     "from ipywidgets import HBox, VBox, Layout, Box\n",
@@ -24,24 +43,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "d4990319fd1c45f580fe4ea02df3d9f1",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=1.0, description='freq', max=3.0, min=-1.0), Dropdown(description='col…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
+   "outputs": [],
    "source": [
     "\n",
     "def live_plot(imax=-1,freq=1., color='blue', lw=2, grid=True):\n",
@@ -63,28 +70,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": null,
    "metadata": {
+    "hideCode": false,
+    "hidePrompt": false,
     "podoc": {
      "output_text": "Interact manual"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "485aa9863aeb49efb555428433cb56ec",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "interactive(children=(FloatSlider(value=1.0, description='freq', max=3.0, min=-1.0), Dropdown(description='col…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "@widgets.interact_manual(\n",
     "    color=['blue', 'red', 'green'], lw=(1., 10.))\n",
@@ -98,8 +92,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": null,
    "metadata": {
+    "hideCode": false,
+    "hidePrompt": false,
     "podoc": {
      "output_text": "Interact manual"
     }
@@ -118,8 +114,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": null,
    "metadata": {
+    "hideCode": false,
+    "hidePrompt": false,
     "podoc": {
      "output_text": "Range slider"
     }
@@ -136,8 +134,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": null,
    "metadata": {
+    "hideCode": false,
+    "hidePrompt": false,
     "podoc": {
      "output_text": "Toggle button widget"
     }
@@ -153,8 +153,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": null,
    "metadata": {
+    "hideCode": false,
+    "hidePrompt": false,
     "podoc": {
      "output_text": "Toggle buttons"
     }
@@ -169,28 +171,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": null,
    "metadata": {
+    "hideCode": false,
+    "hidePrompt": false,
     "podoc": {
      "output_text": "Text widget"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "09fbad8b97ba49dca9c446fb13cbbd6c",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Text(value='Hello World', description='Title:')"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "title_textbox = widgets.Text(\n",
     "    value='Hello World',\n",
@@ -201,8 +190,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 101,
+   "execution_count": null,
    "metadata": {
+    "hideCode": false,
+    "hidePrompt": false,
     "podoc": {
      "output_text": "Color picker"
     }
@@ -218,28 +209,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": null,
    "metadata": {
+    "hideCode": false,
+    "hidePrompt": false,
     "podoc": {
      "output_text": "Button widget"
     }
    },
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e17e58e5ed3e4a528c4b5e5b319b57de",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Button(button_style='danger', description='Run', icon='play', style=ButtonStyle())"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "outputs": [],
    "source": [
     "button = widgets.Button(\n",
     "    description='Run',icon=\"fa-play\",button_style='danger'\n",
@@ -249,8 +227,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "def plot2(b=None):\n",
@@ -271,8 +252,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "@button.on_click\n",
@@ -285,8 +269,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
-   "metadata": {},
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": [
     "items_layout = Layout( )     # override the default width of the button to 'auto' to let the button grow\n",
@@ -303,24 +290,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "application/vnd.jupyter.widget-view+json": {
-       "model_id": "f704d0522c4a45b5acc1c3adf910dc1a",
-       "version_major": 2,
-       "version_minor": 0
-      },
-      "text/plain": [
-       "Box(children=(VBox(children=(FloatSlider(value=2.7, description='Frequency:', max=10.0, min=1.0, readout_forma…"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
+   "execution_count": null,
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
+   "outputs": [],
    "source": [
     "Box(children=[params, out])"
    ]
@@ -328,26 +303,36 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "hideCode": false,
+    "hidePrompt": false
+   },
    "outputs": [],
    "source": []
   }
  ],
  "metadata": {
+  "hide_code_all_hidden": false,
   "kernelspec": {
    "display_name": "Python 3",
    "language": "python",
@@ -363,7 +348,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
