--- a/.app-0.ipynb
+++ b/.app-0.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,16 +11,31 @@
     "importlib.reload(appwdgt)\n",
     "from appwdgt import *\n",
     "import topoptapp\n",
-    "importlib.reload(topoptapp);"
+    "importlib.reload(topoptapp)\n",
+    "from topoptapp import app"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "30f7948469224f6f8dc569e62029436a",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Box(children=(VBox(children=(HTML(value='<h4>Simulation parameters</h4>'), FloatText(value=1.0, description='W…"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
    "source": [
-    "from topoptapp import app\n",
     "app"
    ]
   }
