--- a/app.ipynb
+++ b/app.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,20 +11,18 @@
     "importlib.reload(appwdgt)\n",
     "from appwdgt import *\n",
     "import topoptapp\n",
-    "importlib.reload(topoptapp)\n",
-    "from topoptapp import *\n",
-    "%matplotlib inline"
+    "importlib.reload(topoptapp);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4989c2ec45ef402dabe56153dca76e38",
+       "model_id": "ca7cab0c867d4b1696442beb1aab214e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -37,8 +35,28 @@
     }
    ],
    "source": [
+    "from topoptapp import app\n",
     "app"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'fem' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m               Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-9-c1be3cb9bb39>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfem\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'fem' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -64,7 +82,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.3"
+   "version": "3.8.0"
   }
  },
  "nbformat": 4,
