--- a/app.ipynb
+++ b/app.ipynb
@@ -2,27 +2,27 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 63,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import importlib\n",
-    "import appwdgt\n",
-    "importlib.reload(appwdgt)\n",
-    "from appwdgt import *\n",
-    "import topoptapp\n",
-    "importlib.reload(topoptapp);"
+    "# import importlib\n",
+    "# import appwdgt\n",
+    "# importlib.reload(appwdgt)\n",
+    "# from appwdgt import *\n",
+    "# import topoptapp\n",
+    "# importlib.reload(topoptapp);"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 64,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ca7cab0c867d4b1696442beb1aab214e",
+       "model_id": "3401b3ee615d4104ad6589f2c903de7b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -38,32 +38,6 @@
     "from topoptapp import app\n",
     "app"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 9,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "NameError",
-     "evalue": "name 'fem' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m               Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-9-c1be3cb9bb39>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mfem\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;31mNameError\u001b[0m: name 'fem' is not defined"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
@@ -82,7 +56,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.0"
+   "version": "3.7.3"
   }
  },
  "nbformat": 4,
